--- a/index.html
+++ b/index.html
@@ -1,19 +1,190 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- LINK BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <!-- LINK CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Bolsa Cousera</title>
+
+    <link rel="shortcut icon" href="assets/image/coursera-logo.png" type="image/x-icon">
+    <title>Bolsa Coursera</title>
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+        <div class="container-fluid">
+            <a href="#"><img src="assets/image/coursera-logo.png" alt="Cousera" class="logo me-5 ms-3"></a>
+            <a class="navbar-brand fs-1 me-5" href="#">Coursera</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active fs-6" aria-current="page" href="#">Graduação</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-6" href="#">Cursos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-6" href="#">Pós-Graduação</a>
+                    </li>
+                </ul>
+                <button class="btn btn-outline-primary" type="submit">login</button>
+            </div>
+        </div>
+    </nav>
+
+    <!-- ********************* HEADER ************************ -->
+
+    <header class="container-fluid">
+
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="1000">
+                    <a href="#"><img src="assets/image/imagem header 1.png" class="d-block w-100"
+                            alt="Sua facul presencial tá aqui!">
+                    </a>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <a href="#"><img src="assets/image/iamgem header 2.png" class="d-block w-100"
+                            alt="Hero São Judas Tadeu">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="#"><img src="assets/image/imagem header 3.png" class="d-block w-100"
+                            alt="Cursos a partir de R$99">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="#"><img src="assets/image/imagem header 4.png" class="d-block w-100"
+                            alt="Quero Bolsa + Você= Sucesso 💙">
+                    </a>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </header>
+
+    <!-- ********************* MAIN ************************** -->
+
+    <main class="container col-md-8 ">
+        <div class="row grid gap-5 justify-content-center">
+            <div class="d-flex justify-content-center ">
+                <h1 class="mt-4 ">Graduação</h1>
+            </div>
+            <a href="" class="d-flex justify-content-end ">Ver todos</a>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 1.jpg" class="card-img-top" alt="Enfermagem">
+                <div class="card-body">
+                    <h5 class="card-title">Enfermagem</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 2.jpg" class="card-img-top" alt="Direito">
+                <div class="card-body">
+                    <h5 class="card-title">Direito</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 189,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 3.jpg" class="card-img-top" alt="Psicologia">
+                <div class="card-body">
+                    <h5 class="card-title">Psicologia</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 149,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 4.jpg" class="card-img-top" alt="Engenharia civil">
+                <div class="card-body">
+                    <h5 class="card-title">Engenharia civil</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 5.jpg" class="card-img-top" alt="Sistema de Informação">
+                <div class="card-body">
+                    <h5 class="card-title">Sistema de Informação</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 139,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 6.jpg" class="card-img-top" alt="Arquitetura e Urbanismo">
+                <div class="card-body">
+                    <h5 class="card-title">Arquitetura e Urbanismo</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 129,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 7.jpg" class="card-img-top" alt="Marketing">
+                <div class="card-body">
+                    <h5 class="card-title">Marketing</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 89,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 8.jpg" class="card-img-top" alt="Gestão Financeira">
+                <div class="card-body">
+                    <h5 class="card-title">Gestão Financeira</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/image/imagem main 8.jpg" class="card-img-top" alt="Gestão Financeira">
+                <div class="card-body">
+                    <h5 class="card-title">Gestão Financeira</h5>
+                    <p class="">Ead/Presencial/SemiPresencial</p>
+                    <a href="" class="text-body-secondary btn1">A partir de</a>
+                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+<!-- ************************ FOOTER ************************ -->
+
+<footer class="container-fluid mt-5">
+    <div class="row">
+        <img src="assets/image/coursera-logo.png" alt="" class="img2">
+
+    </div>
+</footer>
+
     <!-- LINK DO BOOTSTRAP DO JAVASCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
