--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
     <!-- LINK BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <!-- LINK DO FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- LINK CSS -->
     <link rel="stylesheet" href="css/style.css">
-
+    <!-- LINK DA FAVICON -->
     <link rel="shortcut icon" href="assets/image/coursera-logo.png" type="image/x-icon">
+
     <title>Bolsa Coursera</title>
 </head>
 
@@ -49,22 +52,22 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="1000">
-                    <a href="#"><img src="assets/image/imagem header 1.png" class="d-block w-100"
+                    <a href="#"><img src="assets/image/header/imagem header 1.png" class="d-block w-100"
                             alt="Sua facul presencial tá aqui!">
                     </a>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <a href="#"><img src="assets/image/iamgem header 2.png" class="d-block w-100"
+                    <a href="#"><img src="assets/image/header/iamgem header 2.png" class="d-block w-100"
                             alt="Hero São Judas Tadeu">
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="#"><img src="assets/image/imagem header 3.png" class="d-block w-100"
+                    <a href="#"><img src="assets/image/header/imagem header 3.png" class="d-block w-100"
                             alt="Cursos a partir de R$99">
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="#"><img src="assets/image/imagem header 4.png" class="d-block w-100"
+                    <a href="#"><img src="assets/image/header/imagem header 4.png" class="d-block w-100"
                             alt="Quero Bolsa + Você= Sucesso 💙">
                     </a>
                 </div>
@@ -91,7 +94,7 @@
             </div>
             <a href="" class="d-flex justify-content-end ">Ver todos</a>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 1.jpg" class="card-img-top" alt="Enfermagem">
+                <img src="assets/image/main/imagem main 1.jpg" class="card-img-top" alt="Enfermagem">
                 <div class="card-body">
                     <h5 class="card-title">Enfermagem</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -100,7 +103,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 2.jpg" class="card-img-top" alt="Direito">
+                <img src="assets/image/main/imagem main 2.jpg" class="card-img-top" alt="Direito">
                 <div class="card-body">
                     <h5 class="card-title">Direito</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -109,7 +112,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 3.jpg" class="card-img-top" alt="Psicologia">
+                <img src="assets/image/main/imagem main 3.jpg" class="card-img-top" alt="Psicologia">
                 <div class="card-body">
                     <h5 class="card-title">Psicologia</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -118,7 +121,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 4.jpg" class="card-img-top" alt="Engenharia civil">
+                <img src="assets/image/main/imagem main 4.jpg" class="card-img-top" alt="Engenharia civil">
                 <div class="card-body">
                     <h5 class="card-title">Engenharia civil</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -127,7 +130,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 5.jpg" class="card-img-top" alt="Sistema de Informação">
+                <img src="assets/image/main/imagem main 5.jpg" class="card-img-top" alt="Sistema de Informação">
                 <div class="card-body">
                     <h5 class="card-title">Sistema de Informação</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -136,7 +139,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 6.jpg" class="card-img-top" alt="Arquitetura e Urbanismo">
+                <img src="assets/image/main/imagem main 6.jpg" class="card-img-top" alt="Arquitetura e Urbanismo">
                 <div class="card-body">
                     <h5 class="card-title">Arquitetura e Urbanismo</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -145,7 +148,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 7.jpg" class="card-img-top" alt="Marketing">
+                <img src="assets/image/main/imagem main 7.jpg" class="card-img-top" alt="Marketing">
                 <div class="card-body">
                     <h5 class="card-title">Marketing</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -154,7 +157,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 8.jpg" class="card-img-top" alt="Gestão Financeira">
+                <img src="assets/image/main/imagem main 8.jpg" class="card-img-top" alt="Gestão Financeira">
                 <div class="card-body">
                     <h5 class="card-title">Gestão Financeira</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
@@ -163,9 +166,9 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="assets/image/imagem main 8.jpg" class="card-img-top" alt="Gestão Financeira">
+                <img src="assets/image/main/imagem main 9.jpg" class="card-img-top" alt="Educação fisica">
                 <div class="card-body">
-                    <h5 class="card-title">Gestão Financeira</h5>
+                    <h5 class="card-title">Educação física</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
                     <a href="" class="text-body-secondary btn1">A partir de</a>
                     <a href="#" class="text-success btn1">R$ 99,90/mês</a>
@@ -174,14 +177,57 @@
         </div>
     </main>
 
-<!-- ************************ FOOTER ************************ -->
+    <!-- ************************ FOOTER ************************ -->
 
-<footer class="container-fluid mt-5">
-    <div class="row">
-        <img src="assets/image/coursera-logo.png" alt="" class="img2">
+    <footer class="container-fluid mt-5">
+        <section class=" row">
 
-    </div>
-</footer>
+            <div class="col-lg-2 logoFooter">
+                <img src="assets/image/coursera-logo.png" alt="" class="img2">
+            </div>
+
+            <div class="d-flex col-lg-6 justify-content-evenly align-items-center politica">
+                <section><a href="" class="linkFooter">Termos e condiçoes</a></section>
+                <section><a href="" class="linkFooter"> Politica de Privacidade</a></section>
+                <section><a href="" class="linkFooter">Torne-se um parceiro</a></section>
+            </div>
+
+            <div class="d-flex col-lg-4 align-items-center justify-content-evenly fontFooter social-icon-list">
+                <section class="icon-group">
+                    <!-- YOU TUBE -->
+                    <div>
+                        <a href=""><i class="fa-brands fa-square-youtube fs-6" style="color: #ffffff;"></i></a>
+                        <span class="icon-txt-hidden">Youtube</span>
+                        <span class="icon-bg"></span>
+                    </div>
+                    <!-- FACEBOOK -->
+                    <div>
+                        <a href=""><i class="fa-brands fa-facebook fs-6" style="color: #ffffff;"></i></a>
+                        <span class="icon-txt hidden">Facebook</span>
+                        <span class="icon-bg"></span>
+                    </div>
+                    <!-- INSTAGRAM -->
+                    <div>
+                        <a href=""><i class="fa-brands fa-instagram fs-6" style="color: #ffffff;"></i></a>
+                        <span class="icon-txt hidden">Instagram</span>
+                        <span class="icon-bg"></span>
+                    </div>
+                    <!-- TIK TOK -->
+                    <div>
+                        <a href=""><i class="fa-brands fa-tiktok fs-6" style="color: #ffffff;"></i></a>
+                        <span class="icon-txt hidden">Tik tok</span>
+                        <span class="icon-bg"></span>
+                    </div>
+                    <!-- TWITER -->
+                    <div>
+                        <a href=""><i class="fa-brands fa-x-twitter fs-6" style="color: #ffffff;"></i></a>
+                        <span class="icon-txt hidden">Twitter</span>
+                        <span class="icon-bg"></span>
+                    </div>
+                </section>
+            </div>
+        </section>
+    </footer>
 
     <!-- LINK DO BOOTSTRAP DO JAVASCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
