iniciado página login

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active fs-6" aria-current="page" href="#">Graduação</a>
+                        <a class="nav-link fs-6" aria-current="page" href="pages/graduacao.html">Graduação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-6" href="#">Cursos</a>
+                        <a class="nav-link fs-6" href="pages/universidades.html">Universidades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fs-6" href="#">Pós-Graduação</a>
                     </li>
                 </ul>
-                <button class="btn btn-outline-primary" type="submit">login</button>
+                <a href="pages/login.html" class="btn btn-outline-primary" type="submit">login<a>
             </div>
         </div>
     </nav>
@@ -52,22 +52,22 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="1000">
-                    <a href="#"><img src="assets/image/header/imagem header 1.png" class="d-block w-100"
+                    <a href="pages/graduacao.html"><img src="assets/image/header/imagem header 1.png" class="d-block w-100"
                             alt="Sua facul presencial tá aqui!">
                     </a>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <a href="#"><img src="assets/image/header/iamgem header 2.png" class="d-block w-100"
+                    <a href="pages/graduacao.html"><img src="assets/image/header/iamgem header 2.png" class="d-block w-100"
                             alt="Hero São Judas Tadeu">
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="#"><img src="assets/image/header/imagem header 3.png" class="d-block w-100"
+                    <a href="pages/graduacao.html"><img src="assets/image/header/imagem header 3.png" class="d-block w-100"
                             alt="Cursos a partir de R$99">
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="#"><img src="assets/image/header/imagem header 4.png" class="d-block w-100"
+                    <a href="pages/graduacao.html"><img src="assets/image/header/imagem header 4.png" class="d-block w-100"
                             alt="Quero Bolsa + Você= Sucesso 💙">
                     </a>
                 </div>
@@ -92,14 +92,16 @@
             <div class="d-flex justify-content-center ">
                 <h1 class="mt-4 ">Graduação</h1>
             </div>
-            <a href="" class="d-flex justify-content-end ">Ver todos</a>
+            <section class="d-flex justify-content-end">
+                <a href="pages/graduacao.html" class="linkMain btn btn-outline-primary">Ver todos</a>
+            </section>
             <div class="card" style="width: 18rem;">
                 <img src="assets/image/main/imagem main 1.jpg" class="card-img-top" alt="Enfermagem">
                 <div class="card-body">
                     <h5 class="card-title">Enfermagem</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 99,90/mês</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -107,8 +109,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Direito</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 189,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 189,90/mês</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -116,8 +118,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Psicologia</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 149,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 149,90/mês</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -125,8 +127,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Engenharia civil</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 99,90/mês</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -134,17 +136,40 @@
                 <div class="card-body">
                     <h5 class="card-title">Sistema de Informação</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 139,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 139,90/mês</a>
                 </div>
+            </div>
+            <div class="bg-primary text-center">
+                <section>
+                    <h1 class="text-light">Cousera <span>Plus</span></h1>
+                </section>
+                
+                <section>
+                    <p class="text-light">Acesso ilimitado a mais de 7.000 cursos de nível mundial, projetos práticos e programas de certificado prontos para o merdado de trabalho, por um preço de assinatura com tudo incluso</p>
+                </section>
+                <section class="mb-3">
+                    <a href="" class="linkAnuncio">US$ 59/mês. pode ser cancelado a qualquer momento</a>
+                </section>
+
+                <section class="mb-3">
+                    <button class="btn btn-outline-light">
+                        Iniciar avaliação gratuita de 7 dias
+                    </button>
+                </section>
+
+                <section  class="mb-3">
+                    <a href="" class="linkAnuncio">ou US$ 399/ano, com garantia de 14 dias para devolução do dinheiro </a>
+                </section>
+
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="assets/image/main/imagem main 6.jpg" class="card-img-top" alt="Arquitetura e Urbanismo">
                 <div class="card-body">
                     <h5 class="card-title">Arquitetura e Urbanismo</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 129,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 129,90/mês</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -152,8 +177,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Marketing</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 89,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 89,90/mês</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -161,8 +186,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Gestão Financeira</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 99,90/mês</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -170,8 +195,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Educação física</h5>
                     <p class="">Ead/Presencial/SemiPresencial</p>
-                    <a href="" class="text-body-secondary btn1">A partir de</a>
-                    <a href="#" class="text-success btn1">R$ 99,90/mês</a>
+                    <a href="pages/login.html" class="text-body-secondary btn1">A partir de</a>
+                    <a href="pages/login.html" class="text-success btn1">R$ 99,90/mês</a>
                 </div>
             </div>
         </div>
@@ -192,39 +217,27 @@
                 <section><a href="" class="linkFooter">Torne-se um parceiro</a></section>
             </div>
 
-            <div class="d-flex col-lg-4 align-items-center justify-content-evenly fontFooter social-icon-list">
-                <section class="icon-group">
-                    <!-- YOU TUBE -->
-                    <div>
-                        <a href=""><i class="fa-brands fa-square-youtube fs-6" style="color: #ffffff;"></i></a>
-                        <span class="icon-txt-hidden">Youtube</span>
-                        <span class="icon-bg"></span>
-                    </div>
-                    <!-- FACEBOOK -->
-                    <div>
-                        <a href=""><i class="fa-brands fa-facebook fs-6" style="color: #ffffff;"></i></a>
-                        <span class="icon-txt hidden">Facebook</span>
-                        <span class="icon-bg"></span>
-                    </div>
-                    <!-- INSTAGRAM -->
-                    <div>
-                        <a href=""><i class="fa-brands fa-instagram fs-6" style="color: #ffffff;"></i></a>
-                        <span class="icon-txt hidden">Instagram</span>
-                        <span class="icon-bg"></span>
-                    </div>
-                    <!-- TIK TOK -->
-                    <div>
-                        <a href=""><i class="fa-brands fa-tiktok fs-6" style="color: #ffffff;"></i></a>
-                        <span class="icon-txt hidden">Tik tok</span>
-                        <span class="icon-bg"></span>
-                    </div>
-                    <!-- TWITER -->
-                    <div>
-                        <a href=""><i class="fa-brands fa-x-twitter fs-6" style="color: #ffffff;"></i></a>
-                        <span class="icon-txt hidden">Twitter</span>
-                        <span class="icon-bg"></span>
-                    </div>
-                </section>
+            <div class="d-flex col-lg-4 align-items-center justify-content-evenly fontFooter mb-2">
+                <!-- YOU TUBE -->
+                <div class="icon-group">
+                    <a href=""><i class="fa-brands fa-square-youtube fs-6" style="color: #ffffff;"></i></a>
+                </div>
+                <!-- FACEBOOK -->
+                <div class="icon-group">
+                    <a href=""><i class="fa-brands fa-facebook fs-6" style="color: #ffffff;"></i></a>
+                </div>
+                <!-- INSTAGRAM -->
+                <div class="icon-group">
+                    <a href=""><i class="fa-brands fa-instagram fs-6" style="color: #ffffff;"></i></a>
+                </div>
+                <!-- TIK TOK -->
+                <div class="icon-group">
+                    <a href=""><i class="fa-brands fa-tiktok fs-6" style="color: #ffffff;"></i></a>
+                </div>
+                <!-- TWITER -->
+                <div class="icon-group">
+                    <a href=""><i class="fa-brands fa-x-twitter fs-6" style="color: #ffffff;"></i></a>
+                </div>
             </div>
         </section>
     </footer>
