--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -46,7 +46,7 @@
     </nav>
 
     <!-- ********************* MAIN ************************** -->
-    <main class="container generoCadastro">
+    <main class="container Cadastro">
         <h1 class="text-center my-5">Informações pessoais</h1>
 
         <form action="#">
@@ -90,7 +90,7 @@
                 <!-- CAMPO TEL -->
                 <section class="row mb-3">
                     <div class="col-12 input-group">
-                        <input type="tel" name="tel" id="tel" class="form-control " placeholder="Celular">
+                        <input type="tel" name="tel" id="tel" class="form-control " placeholder="Celular" maxlength="13">
                     </div>
                 </section>
                 <!-- CAMPO GENERO -->
@@ -106,7 +106,8 @@
                 </section>
                 <!-- CAMPO DATA DE NASCIMENTO -->
                 <section class="row mb-3">
-                    <div class="col-12 input-group">
+                    <div class="col-12 ">
+                        <label for="data">Data de Nascimento</label>
                         <input type="date" name="data" id="data" class="form-control " placeholder="dd/mm/aaaa">
                     </div>
                 </section>
@@ -114,11 +115,39 @@
                 <div class="col-6 mx-auto my-3">
                     <button type="submit" class="btn btn-primary col-12">Cadastrar</button>
                 </div>
+
+
             </div>
 
-            <section>
+            <!-- CAMPOS DE CARTÃO -->
+            <div>
+                <section class="row mb-3">
+                    <div class="col-12 input-group">
+                        <input type="text" name="cartao" id="cartao" placeholder="N° do cartão" class="form-control"
+                            maxlength="19">
+                    </div>
+                </section>
 
-            </section>
+                <!-- CAMPO CPF -->
+                <section class="row mb-3">
+                    <div class="col-12 input-group">
+                        <input type="text" name="cpf" id="cpf" class="form-control " placeholder="CPF" maxlength="14">
+                    </div>
+                </section>
+
+                <section class="row mb-3">
+                    <div class="col-6 ">
+                        <label for="validade"> Data de vencimento</label>
+                        <input type="month" name="validade" id="validade" placeholder="Data de Validade"
+                            class="form-control">
+                    </div>
+
+                    <div class="col-6 ">
+                        <label for="cod">Código de segurança</label>
+                        <input type="text" name="cod" id="cod" placeholder="123" class="form-control" maxlength="3">
+                    </div>
+                </section>
+            </div>
         </form>
 
 
@@ -168,6 +197,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="../js/script.js"></script>
+
+    <script src="../js/pageCadastro.js"></script>
 </body>
 
 </html>
