--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -117,7 +117,7 @@
 
             <div class="col-md-12">
                 <label for="data" class="form-label">Data de nascimento</label>
-                <input type="text" class="form-control" id="data" required>
+                <input type="date" class="form-control" id="data" required>
                 <div class="invalid-feedback">
                     bota a data que tu nasceu ai sio.
                 </div>
