--- a/pages/cadFinal.html
+++ b/pages/cadFinal.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col-6 mx-auto my-3">
-                    <button class="btn btn-primary col-12" type="submit">Finalizar</button>
+                    <a href="finalizar.html" class="btn btn-primary col-12" type="submit">Finalizar</a href="finalizar.html">
                 </div>
         </form>
 
